module4/frontend.yaml
# Frontend Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev-new
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
