module4/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
name: backend-svc
namespace: dev-new
spec:
type: ClusterIP
selector:
app: backend
ports:

port: 80
targetPort: 80
